[project]
name = "utilisateur07"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-admin-rangefilter>=0.13.5",
    "django-admin-sortable2>=2.3.1",
    "django-imagekit>=6.1.0",
    "django-lucus>=0.1.10",
    "pillow>=12.2.0",
    "pyexiv2>=2.15.5",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pytest-coverage>=0.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.17",
]
